vlib/v/checker/tests/wrong_fn_init_err.vv
type MyCallback = fn () string

fn main() {
	a := MyCallback{}
	println(a)
}
